--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>AyNovusTestTask</groupId>
     <artifactId>AyNovusTestTask</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <build>
         <plugins>
